@@ -95,6 +95,7 @@ PEOPE WHO MADE LANGUAGE FILES
 - EPC                    Thorsten Muehlfelder
 - Erlang                 Benny Baumann, Dan Forest-Barbier, Uwe Dauernheim
 - F#                     Julien Ortin
+- Falcon                 billykater
 - FO (abas-ERP)          Tan-Vinh Nguyen
 - FormulaOne             Juro Bystricky
 - Fortran                Cedric Arrabie
